--- a/src/main/webapp/EffectiveMusic.html
+++ b/src/main/webapp/EffectiveMusic.html
@@ -11,19 +11,19 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="GwtWebApp.css">
+    <link type="text/css" rel="stylesheet" href="EffectiveMusic.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>GWT Spring Boot Application Starter Project</title>
+    <title>Effective Music</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
     <!-- If you add any GWT meta tags, they must   -->
     <!-- be added before this line.                -->
     <!--                                           -->
-    <script type="text/javascript" language="javascript" src="gwtwebapp/gwtwebapp.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="effectivemusic/effectivemusic.nocache.js"></script>
   </head>
 
   <!--                                           -->
